# Tamil-NLP

./: .gitignore  BERT_Sentiment_Analysis.ipynb  BLSTM_Sentiment_Analysis.ipynb  BLSTM_Sentiment_Analysis_presentation.ipynb  Gradio_ChatGPT.ipynb  Tamil_Categorization.ipynb  chatGPT_mod.py  helper.py  home-ui.html  inspirational_quotes.csv  test.json  translation.py  webscrap.py
Models/: BLSTM_model1.h5
Sentiment Analysis/: BLSTM_Sentiment_Analysis.ipynb  Procfile  app.py  helper.py  pyproject.toml  requirements.txt  sentiment_analysis.py  translation.py
Sentiment Analysis/templates/: home.html  index.html
